--- a/app/src/main/res/layout/activity_add_new_event.xml
+++ b/app/src/main/res/layout/activity_add_new_event.xml
@@ -128,6 +128,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="@string/add_new_event"
+        android:onClick="onClick"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/new_event_category" />
