--- a/app/src/main/res/layout/event_fragment_general.xml
+++ b/app/src/main/res/layout/event_fragment_general.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
+
 
     <ImageView
         android:id="@+id/event_image"
@@ -27,6 +28,7 @@
         android:layout_marginTop="16dp"
         android:drawableStart="@drawable/ic_event_black_24dp"
         android:drawablePadding="16dp"
+        android:text="@{temp.name}"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
