--- a/app/src/main/res/layout/fragment_people_overview.xml
+++ b/app/src/main/res/layout/fragment_people_overview.xml
@@ -7,46 +7,44 @@
     android:layout_height="match_parent"
     tools:context=".fragment.PeopleOverviewFragment">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:id="@+id/relativeLayoutEmail"
         android:layout_width="match_parent"
-        android:layout_height="25sp"
-        android:orientation="vertical"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_height="0dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
+        android:orientation="horizontal"
         >
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:textSize="18sp"
-            android:text="@string/email" />
-        <ImageButton
-            android:id="@+id/moreImageButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:background="@null"
-            android:src="@android:drawable/ic_input_add" />
         <EditText
-            android:id="@+id/new_invitation_email"
+            android:id="@+id/new_invitation_email_edittext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
             android:ems="10"
+            android:inputType="textEmailAddress"
+            android:hint="@string/invitation_email"
             />
-    </RelativeLayout>
+        <ImageButton
+            android:id="@+id/new_invitation_email_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:src="@android:drawable/ic_input_add"
+            />
+</LinearLayout>
 
     <!-- TODO: Update blank fragment layout -->
     <android.support.v7.widget.RecyclerView
         android:id="@+id/people_rv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10sp"
+        android:layout_height="0dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
         app:layout_constraintTop_toBottomOf="@+id/relativeLayoutEmail"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintVertical_bias="0.0" />
+        />
 
 </android.support.constraint.ConstraintLayout>
