--- a/app/src/main/res/layout/user_email_view.xml
+++ b/app/src/main/res/layout/user_email_view.xml
@@ -4,16 +4,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    tools:layout_editor_absoluteY="50dp"
-    android:layout_marginEnd="16dp"
-    android:layout_marginStart="16dp">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/people_user_email"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-
         />
 
     <ImageButton
