--- a/app/src/main/res/layout/invitation_user_email.xml
+++ b/app/src/main/res/layout/invitation_user_email.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
     <TextView
         android:id="@+id/invitation_user_email_tv"
         android:layout_width="0dp"
