--- a/app/src/main/res/layout/shopping_list_item_view.xml
+++ b/app/src/main/res/layout/shopping_list_item_view.xml
@@ -19,13 +19,17 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <CheckBox
+        android:clickable="false"
+        android:focusable="false"
+        android:longClickable="false"
         android:id="@+id/shoppinglist_item_status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <TextView
         android:id="@+id/shoppinglist_item_quantity"
