--- a/app/src/main/res/layout/invitation_user_email.xml
+++ b/app/src/main/res/layout/invitation_user_email.xml
@@ -11,12 +11,12 @@
         />
 
     <ImageButton
-        android:id="@+id/moreImageButton"
+        android:id="@+id/invitation_statusImageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:background="@null"
-        android:src="@android:drawable/presence_online"
+        android:src="@drawable/ic_status_pending_24dp"
         android:layout_centerVertical="true"
         app:layout_constraintRight_toRightOf="parent" />
 </android.support.constraint.ConstraintLayout>
